# simbench

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: github_test_action.yml  release.yml  test_release.yml  upload_release.yml
doc/: about.rst  conf.py  converter.rst  index.rst  networks.rst  profiles.rst
doc/about/: installation.rst  license.rst  tutorials.rst
simbench/: __init__.py
simbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simbench/converter/: __init__.py  auxiliary.py  csv_data_manipulation.py  csv_pp_converter.py  format_information.py  pp_net_manipulation.py  read_and_write.py  voltLvl.py
simbench/networks/: __init__.py  extract_simbench_grids_from_csv.py  loadcases.py  profiles.py  simbench_code.py
simbench/networks/1-complete_data-mixed-all-0-sw/: Measurement.csv  Transformer.csv
simbench/networks/1-complete_data-mixed-all-1-sw/: Coordinates.csv  ExternalNet.csv  Line.csv  Measurement.csv  RES.csv  Storage.csv  Transformer.csv
simbench/networks/1-complete_data-mixed-all-2-sw/: Coordinates.csv  Line.csv  Measurement.csv  PowerPlant.csv  RES.csv  Storage.csv  Transformer.csv
simbench/test/: __init__.py  run_tests.py
simbench/test/converter/: test_auxiliary.py  test_csv_pp_converter.py  test_pp_net_manipulation.py  test_voltLvl.py
simbench/test/converter/test_network/: Storage.csv
simbench/test/converter/test_network_output_folder/: Coordinates.csv  LineType.csv  Node.csv  PowerPlantProfile.csv  Storage.csv  TransformerType.csv
simbench/test/networks/: test_extract_grids_from_csv.py  test_profiles.py  test_simbench_code.py  test_simbench_loadcases.py
tutorials/: EHVHV_powerflow_expl.ipynb  simbench_converter_usage.ipynb  simbench_grids_basics_and_usage.ipynb
