[build-system]
requires = ["build", "wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simbench"
version = "1.6.1"
authors = [
    { name = "Steffen Meinecke", email = "steffen.meinecke@uni-kassel.de" }
]
maintainers = [
    { name = "simbench Developers", email = "simbench@uni-kassel.de" }
]
description = "Electrical Power System Benchmark Models."
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    # Add the specific Python versions supported here, e.g.:
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "pandapower>=3.0.0"
    ]
keywords = [
    "benchmark grid", "power system", "network", "grid planning", "grid operation", "grid generation methodology", "comparability", "reproducibility", "electricity", "energy", "engineering", "simulation", "simbench", "time series", "future scenarios"
]

[project.urls]
Homepage = "https://www.simbench.net"
Documentation = "https://simbench.readthedocs.io"
Source = "https://www.github.com/e2nIEE/simbench"
Repository = "https://www.github.com/e2nIEE/simbench.git"
Issues = "https://www.github.com/e2nIEE/simbench/issues"
Download = "https://pypi.org/project/simbench/#files"
Changelog = "https://github.com/e2nIEE/simbench/blob/develop/CHANGELOG.rst"

[project.optional-dependencies]
docs = ["numpydoc", "sphinx", "sphinx_rtd_theme", "sphinx-pyproject"]
plotting = ["plotly>=3.1.1", "matplotlib", "igraph", "geopandas", "geojson"]
test = ["pytest~=8.1", "pytest-xdist", "nbmake"]
performance = ["ortools", "numba>=0.25", "lightsim2grid>=0.8.1"]
fileio = ["geopandas"]
tutorials = ["matplotlib"]
all = [
    "plotly>=3.1.1", "matplotlib", "igraph", "geopandas", "geojson",
    "pytest~=8.1", "pytest-xdist", "nbmake",
    "ortools", "numba>=0.25", "lightsim2grid>=0.8.1",
    "geopandas",
    "matplotlib"
]
# "shapely", "pyproj", "fiona" are dependencies of geopandas and should be already available

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"'), e.g. in run_fast_tests"
]
